// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly with airplane icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0F853B20",
      "borderColor": "#0F853B",
      "borderRadius": 8,
      "borderWidth": 2,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <Ionicons
    color="#0F853B"
    name="md-airplane"
    size={32}
    style={
      {
        "marginRight": 16,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      Transport
    </Text.Primary>
  </View>
  <Ionicons
    color="#0F853B"
    name="chevron-forward"
    size={20}
  />
</TouchableOpacity>
`;

exports[`Tag renders correctly with no icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0F853B20",
      "borderColor": "#0F853B",
      "borderRadius": 8,
      "borderWidth": 2,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      Transport
    </Text.Primary>
  </View>
  <Ionicons
    color="#0F853B"
    name="chevron-forward"
    size={20}
  />
</TouchableOpacity>
`;
